Fixing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ a {
 footer {
   display: flex;
   align-items: center;
-  /* margin-top: auto; */
+  margin-top: auto;
   box-shadow: 0 0 5px #e5e5e5;
 }
 
@@ -160,12 +160,16 @@ footer p {
   width: 100%;
 }
 
-.home-container {
+/* .home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2em;
   margin: auto;
+} */
+
+.home-container {
+  display: none;
 }
 
 .pct-calculators-container {
